--- a/index.html
+++ b/index.html
@@ -11,117 +11,119 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- custom css -->
-    <link rel="stylesheet" href="cssFiles/portfolio/style.css">
+    <link rel="stylesheet" href="cssFiles/style.css">
 
     <!-- icon link -->
-    <link rel="icon" href="imagesFiles/portfolio/iconDev1.ico">
+    <link rel="icon" href="imagesFiles/iconDev1.ico">
 
 </head>
 <body>
     
     <!-- header design -->
     <header class="header">
-        <a href="" class="logo">Portfolio</a>
+        <a href="" class="logo">Portafolio</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
         <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <!-- <a href="#services">Services</a> -->
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
-            <a href="indexSpanish.html"><i class='bx bx-world'></i></a>
+            <a href="#home" class="active">Hogar</a>
+            <a href="#about">Acerca de Mí</a>
+            <!-- <a href="#services">Servicios test</a> -->
+            <a href="#portfolio">Portafolio</a>
+            <a href="#contact">Contacto</a>
+            <a href="index.html"><i class='bx bx-world'></i></a>
         </nav>
     </header>
 
     <!-- home section design -->
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello, It's Me</h3>
+            <h3>Hola, soy</h3>
             <h1>Franco Di Mascio</h1>
-            <h3>And I'm a</h3>
+            <!--<h3>Y soy </h3>-->
             <h3><span class="multiple-text"></span></h3>
-            <p>Welcome to my portfolio as a Frontend Developer. 
-                 I'm glad that you are checking around here. Follow me on my social media down bellow</p>
+            <p>Bienvenido a mi portafolio cómo Frontend Developer. 
+                 Me contenta tenerte por aquí. Sígueme en mis redes sociales y contacta conmigo</p>
             <div class="social-media">
                 <a href="https://www.facebook.com/francodimascio"><i class='bx bxl-facebook'></i></a>
                 <a href="https://twitter.com/Franco_DiMascio"><i class='bx bxl-twitter'></i></a>
                 <a href="https://www.instagram.com/francodimascio5/"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="https://www.linkedin.com/in/franco-di-mascio-Code-dev/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.linkedin.com/in/franco-di-mascio-Code-dev"><i class='bx bxl-linkedin'></i></a>
             </div>
-            <a download="Currículum Franco Di Mascio PDF" href="files/Currículum Franco Di Mascio PDF.pdf" class="btn">Download CV</a>
+            <a download="Currículum Franco Di Mascio PDF" href="files/Currículum Franco Di Mascio PDF.pdf" class="btn">Descargar CV</a>
         </div>
 
         <div class="home-img">
-            <img src="imagesFiles/portfolio/home.png" alt="Franco Di Mascio">
+            <img src="imagesFiles/home.png" alt="Franco Di Mascio">
         </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="imagesFiles/portfolio/about5.png" alt="">
-            <!-- Needed case: https://i.ibb.co/87kkGKM/about5.png -->
+            <img src="imagesFiles/about5.png" alt=""> 
+            <!-- En caso de necesitarse: https://i.ibb.co/87kkGKM/about5.png -->
         </div>
 
         <div class="about-content">
-            <h2 class="heading">About <span>Me</span></h2>
+            <h2 class="heading">Acerca de <span>Mí</span></h2>
             <h3>Junior Frontend Developer</h3>
             <div class="about-out" id="about-out">
-                <h4>¿How did I find out about programming?</h4>
-                <p>When I was 17 years old I was in an online game called Tibia, this game became my favorite for a long time...</p>
-                <h4>¿What are my skills?</h4>
-                <p>Java Level: ...</p>
-                <h4>¿Short and long aspirations?</h4>
-                <p>In the short term, have a firm and solid foundation ...</p>
+                <h4>¿Cómo conocí la programación?</h4>
+                <p>A mis 17 años me encontraba en un juego online llamado Tibia, dicho juego llegó a ser mi favorito durante ...</p>
+                <h4>¿Cuales son mis habilidades?</h4>
+                <p>Java Nivel: ...</p>
+                <h4>¿Aspiraciones a corto y largo plazo?</h4>
+                <p>A corto plazo, tener una base firme y ...</p>
                 <h4>Hobbies</h4>
                 <p>...</p>
             </div>
             <div class="about-more-info-hidden" id="about-more-info">
-                <h4>¿How did I find out about programming?</h4>
-                <p>When I was 17 years old I was in an online game called Tibia, this game became my favorite for a long time, inevitably I found some players who moved automatically, structuredly and did not respond to my messages, which led me to investigate further. Over time I discovered that they were characters called "Bot's", which were programmed by people who, like me, they were in love with the game and were a developer/programmer as a profession. This is how I got to know programming, since then it always amazed me and caught my attention, by then I saw it as complex, a year later I started trying to program a "Bot" in LUA language, being extremely difficult but having success, surprising so to some of the people who programmed because of my poorly written, inexperienced but incredibly creative and effective code. For some reason I didn't think I could learn it on my own. I had a few other attempts but the more functions it was more complex without an education... as the years passed, I looked at programming as a dream that captured my attention a lot but I had not proposed it as a purpose to learn. Many years later, calmly I realized that I had an ability to program but I was not able to see it clearly at that time, with this came the fact of investigating more and seeing it as a profession acquiring my first Java course on Udemy. Then I learned Python (so far one of the ones I've loved the most) and finally decided to learn frontend; HTML, CSS, JavaScript and along with backend using Python (flask), MYSQL.</p>
+                <h4>¿Cómo conocí la programación?</h4>
+                <p>A mis 17 años me encontraba en un juego online llamado Tibia, dicho juego llegó a ser mi favorito durante muchisímo tiempo, inevitablemente me encontré con algunos jugadores que se movian de manera automática, estructuradamente y no respondían mis mensajes, lo cual me llevó a investigar más. Con el tiempo descubrí que se trataba de personajes llamados "Bot's", qué eran programados por personas que al igual que yo estaban enamorados del juego y a su vez tenían cómo profesión desarrolladores/programadores. De esta manera fue que conocí la programación, desde entonces siempre me causó asombro y me llamó la atención, para ese entonces lo ví complejo, un año después comencé intentar programa un "Bot" en lenguaje LUA, siendo extremadamente díficil pero teníendo éxito, soprendiendo así a algunas de las personas que programaban por mi código mal escrito, inexperto pero increiblemente creativo y efectivo. Por alguna razón no pensé que podría aprenderlo por mi cuenta.
+                    Tuve algunos otros intentos más pero mientras más funciones era más complejo sin una educación... a medida que pasaban lo años, miraba la programación cómo un sueño que acaparaba muchísimo mi atención pero no lo tenía propuesto cómo proposito para aprender. Muchos años después, en calma me di cuenta que tenía una habilidad para programar pero no era capaz de verla con claridad para aquella época, con ello surgió el hecho de investigar más y verlo cómo una profesión adquiriendo mi primer curso de Java en Udemy. Luego aprendí Python (hasta el momento uno de los que más me ha encantado) y finalmente decidí aprender frontend; HTML, CSS, JavaScript y junto con backend usando Python (flask), MYSQL.</p>
 
-                <h4>¿What are my skills?</h4>
+                <h4>¿Cuales son mis habilidades?</h4>
                 <ul>
-                    <li>Java Level: basic</li>
-                    <li>Python  Level: medium</li>
-                    <li>HTML Level: advanced</li>
-                    <li>CSS Level: medium - advanced</li>
-                    <li>JavaScript Level: basic</li>
+                    <li>Java Nivel: básico</li>
+                    <li>Python  Nivel: medio</li>
+                    <li>HTML Nivel: avanzado</li>
+                    <li>CSS Nivel: medio - avanzado</li>
+                    <li>JavaScript Nivel: básico</li>
                 </ul>    
 
                 <h4>Hobbies</h4>
                 <ul>
-                    <li>Soccer</li>
-                    <li>activities with my daughter</li>
+                    <li>Futbol</li>
+                    <li>Actividades con mi hija</li>
                     <li>Gaming</li>
-                    <li>meditation / reading</li>
+                    <li>Meditación / lectura</li>
                 </ul>
 
-                <h4>¿Short and long aspirations?</h4>
-                <p>In the short term, have a firm and solid foundation regarding frontend and backend knowledge, thus having specific knowledge, outlined and oriented to the same horizon, allowing me to provide the company that hires me or the person who hires my services with management complete with vast knowledge.</p>
-                <p>In the long term, my dream is to dedicate completely to computer security, also known as Ethical Hacking. I find this my greatest passion and motivation in the world of programming because I have always been a very detailed and analytical person regarding what I really like, and in this area the programmer's ability to perceive needs/goals and digest them is essential, considering that I can have creative perspectives regarding handling a problem, need or a solution.</p> 
+                <h4>¿Aspiraciones a corto y largo plazo?</h4>
+                <p>A corto plazo, tener una base firme y sólida respecto a los conocimientos de frontend y backend, teniendo así un conocimiento en concreto, perfilado y orientado a un mismo horizonte, permitiendome brindarle a la compañia que me contrate o persona que contrate mis servios una gestión completa con conocimientos vastos.</p>
+                <p>A largo plazo, mi sueño es dedicarme por completo a la seguridad informática, también conocido cómo Hacking Ético. Encuentro esto cómo mi mayor pasión y motivación en el mundo de la programación ya qué siempre he sido una persona muy detallista y analítica respecto a lo que realmente me gusta, y en este ámbito la capacidad del programador para percibir las necesidades/metas y digerirlas es esencial, teniendo en cuenta que puedo tener perspectivas creativas respecto a manejar un problema, necesidad o una solución. </p> 
             </div>
 
-            <button onclick="moreInfoAbout()" class="btn" id="moreInfoAbout-id">Read More</button>
+            <button onclick="moreInfoAbout()" class="btn" id="moreInfoAbout-id">Leer Más</button>
 
         </div>
+
     </section>
 
     <!-- services section design -->
     <!-- <section class="services" id="services">
-        <h2 class="heading">Our <span>Services</span></h2>
+        <h2 class="heading">Mis <span>Servicios</span></h2>
 
         <div class="services-container">
 
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
-                <h3>Web Development</h3>
+                <h3>Desarrollo Web</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas earum 
                 architecto nostrum quod exercitationem 
                     ducimus tenetur velit aut deserunt voluptatum.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn">Leer Más</a>
             </div>
 
             <div class="services-box">
@@ -147,14 +149,14 @@
 
     <!-- portfolio section design -->
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Lastest <span>Project</span></h2>
+        <h2 class="heading">Últimos <span>Projectos</span></h2>
 
         <div class="portfolio-container">
 
             <div class="portfolio-box">
-                <img src="imagesFiles/portfolio/portfolio1.jpg" alt="">
+                <img src="imagesFiles/portfolio1.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Diseño Web</h4>
                     <h4>Landing Page</h4>
                     <p>Tech_Shop</p>
                     <a href="htmlFiles/landingPageTech_Shop/index.html"><i class='bx bx-link-external'></i></a>
@@ -162,21 +164,21 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="imagesFiles/portfolio/portfolio2.jpg" alt="">
+                <img src="imagesFiles/portfolio2.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <h4>Data base/Stock</h4>
-                    <p>Shop Shoes</p>
+                    <h4>Diseño Web</h4>
+                    <h4>Base de datos/Stock</h4>
+                    <p>Tiendas Shoes</p>
                     <a href="htmlFiles/tiendasShoes/index.html"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="imagesFiles/portfolio/portfolio3.jpg" alt="">
+                <img src="imagesFiles/portfolio3.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <h4>Family Album</h4>
-                    <p>Di Maquino Family Album</p>
+                    <h4>Diseño Web</h4>
+                    <h4>Album Familiar</h4>
+                    <p>Di Maquino album familiar</p>
                     <a href="htmlFiles/album/index.html"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -185,20 +187,20 @@
 
     <!-- contact section design -->
     <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me</span></h2>
+        <h2 class="heading">Contacta <span>Conmigo</span></h2>
 
         <form id="form" action="#">
 
             <div class="input-box">
-                <input type="text" name="name" id="name" required placeholder="Full Name">
-                <input type="email" name="email" id="email" required placeholder="Email Address">
+                <input type="text" name="name" id="name" required placeholder="Nombre Completo">
+                <input type="email" name="email" id="email" required placeholder="Correo Electrónico">
             </div>
             <div class="input-box">
-                <input type="number" name="number" id="number" placeholder="Mobile Number" class="mobile">
-                <input type="text" name="email-subject" id="email-subject" required placeholder="Email Subject">
+                <input type="number" name="number" id="number" placeholder="Número Telefónico" class="mobile">
+                <input type="text" name="email-subject" id="email-subject" required placeholder="Título Del Correo">
             </div>
-            <textarea name="message" id="message" required cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
+            <textarea name="message" id="message" required cols="30" rows="10" placeholder="Tú mensaje"></textarea>
+            <input type="submit" value="Enviar Mensaje" class="btn">
         
         </form>
 
@@ -217,6 +219,8 @@
         </div>
     </footer>
 
+
+
     <!-- scroll reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
 
@@ -224,6 +228,6 @@
     <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
 
     <!-- custom js -->
-    <script src="javascriptFiles/portfolio/script.js" ></script>
+    <script src="javascriptFiles/script.js" ></script>
 </body>
 </html>
