arreglando el botón de pasar a English

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- <a href="#services">Servicios test</a> -->
             <a href="#portfolio">Portafolio</a>
             <a href="#contact">Contacto</a>
-            <a href="index.html"><i class='bx bx-world'></i></a>
+            <a href="indexEnglish.html"><i class='bx bx-world'></i></a>
         </nav>
     </header>
 
