--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -31,7 +31,7 @@
             <!-- <a href="#services">Services</a> -->
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
-            <a href="indexSpanish.html"><i class='bx bx-world'></i></a>
+            <a href="index.html"><i class='bx bx-world'></i></a>
         </nav>
     </header>
 
