añadiendo más rutas

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <h4>Diseño Web</h4>
                     <h4>Landing Page</h4>
                     <p>Tech_Shop</p>
-                    <a href="htmlFiles/landingPageTech_Shop/index.html"><i class='bx bx-link-external'></i></a>
+                    <a href="https://francodimas.github.io/Landing-Page/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -169,7 +169,7 @@
                     <h4>Diseño Web</h4>
                     <h4>Base de datos/Stock</h4>
                     <p>Tiendas Shoes</p>
-                    <a href="htmlFiles/tiendasShoes/index.html"><i class='bx bx-link-external'></i></a>
+                    <a href="https://francodimas.github.io/Data-Base/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -179,7 +179,7 @@
                     <h4>Diseño Web</h4>
                     <h4>Album Familiar</h4>
                     <p>Di Maquino album familiar</p>
-                    <a href="https://francodimas.github.io/Album-Digital/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://francodimas.github.io/Album-Digital/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
