--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -157,7 +157,7 @@
                     <h4>Web Design</h4>
                     <h4>Landing Page</h4>
                     <p>Tech_Shop</p>
-                    <a href="htmlFiles/landingPageTech_Shop/index.html"><i class='bx bx-link-external'></i></a>
+                    <a href="https://francodimas.github.io/Landing-Page/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -167,7 +167,7 @@
                     <h4>Web Design</h4>
                     <h4>Data base/Stock</h4>
                     <p>Shop Shoes</p>
-                    <a href="htmlFiles/tiendasShoes/index.html"><i class='bx bx-link-external'></i></a>
+                    <a href="https://francodimas.github.io/Data-Base/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -177,7 +177,7 @@
                     <h4>Web Design</h4>
                     <h4>Family Album</h4>
                     <p>Di Maquino Family Album</p>
-                    <a href="htmlFiles/album/index.html"><i class='bx bx-link-external'></i></a>
+                    <a href="https://francodimas.github.io/Album-Digital/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
