--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -45,7 +45,7 @@
             <p>Welcome to my portfolio as a Frontend Developer. 
                  I'm glad that you are checking around here. Follow me on my social media down bellow</p>
             <div class="social-media">
-                <a href="https://www.facebook.com/francodimascio"><i class='bx bxl-facebook'></i></a>
+                <a href="https://github.com/FrancoDiMas"><i class='bx bxl-github'></i></a>
                 <a href="https://twitter.com/Franco_DiMascio"><i class='bx bxl-twitter'></i></a>
                 <a href="https://www.instagram.com/francodimascio5/"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://www.linkedin.com/in/franco-di-mascio-Code-dev/"><i class='bx bxl-linkedin'></i></a>
