--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="https://www.instagram.com/francodimascio5/"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://www.linkedin.com/in/franco-di-mascio-Code-dev"><i class='bx bxl-linkedin'></i></a>
             </div>
-            <a download="Currículum Franco Di Mascio PDF" href="files/Currículum Franco Di Mascio PDF.pdf" class="btn">Descargar CV</a>
+            <a download="PDF Currículum Franco Di Mascio" href="archivos/PDF Currículum Franco Di Mascio.pdf" class="btn">Descargar CV</a>
         </div>
 
         <div class="home-img">
@@ -149,7 +149,7 @@
 
     <!-- portfolio section design -->
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Últimos <span>Projectos</span></h2>
+        <h2 class="heading">Últimos <span>Proyectos</span></h2>
 
         <div class="portfolio-container">
 
