agregando las miniaturas de los proyectos

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="portfolio-container">
 
             <div class="portfolio-box">
-                <img src="imagesFiles/portfolio1.jpg" alt="">
+                <img src="imagesFiles/portfolio1.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Diseño Web</h4>
                     <h4>Landing Page</h4>
@@ -164,7 +164,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="imagesFiles/portfolio2.jpg" alt="">
+                <img src="imagesFiles/portfolio2.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Diseño Web</h4>
                     <h4>Base de datos/Stock</h4>
@@ -174,7 +174,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="imagesFiles/portfolio3.jpg" alt="">
+                <img src="imagesFiles/portfolio3.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Diseño Web</h4>
                     <h4>Album Familiar</h4>
