añadiendo nuevo botón y etc

--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
                     <h4>Diseño Web</h4>
                     <h4>Landing Page</h4>
                     <p>Tech_Shop</p>
-                    <a href="https://francodimas.github.io/Landing-Page/" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a class="portfoli-layer-a-edited" href="https://francodimas.github.io/Landing-Page/" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a class="portfoli-layer-a-edited" href="https://francodimas.github.io/Landing-Page/indexModificado.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
