Traduciendo, actualizando etc.

--- a/index.html
+++ b/index.html
@@ -70,39 +70,39 @@
             <h3>Junior Frontend Developer</h3>
             <div class="about-out" id="about-out">
                 <h4>¿Cómo conocí la programación?</h4>
-                <p>A mis 17 años me encontraba en un juego online llamado Tibia, dicho juego llegó a ser mi favorito durante ...</p>
+                <p>Cuando tenía aproximadamente 13 años por medio de un juego llamado "Tibia" conocí lo que era la programación ...</p>
                 <h4>¿Cuales son mis habilidades?</h4>
-                <p>Java Nivel: ...</p>
+                <p>HTML ...</p>
                 <h4>¿Aspiraciones a corto y largo plazo?</h4>
-                <p>A corto plazo, tener una base firme y ...</p>
+                <p>A corto plazo, tener una base sólida ...</p>
                 <h4>Hobbies</h4>
                 <p>...</p>
             </div>
             <div class="about-more-info-hidden" id="about-more-info">
                 <h4>¿Cómo conocí la programación?</h4>
-                <p>A mis 17 años me encontraba en un juego online llamado Tibia, dicho juego llegó a ser mi favorito durante muchisímo tiempo, inevitablemente me encontré con algunos jugadores que se movian de manera automática, estructuradamente y no respondían mis mensajes, lo cual me llevó a investigar más. Con el tiempo descubrí que se trataba de personajes llamados "Bot's", qué eran programados por personas que al igual que yo estaban enamorados del juego y a su vez tenían cómo profesión desarrolladores/programadores. De esta manera fue que conocí la programación, desde entonces siempre me causó asombro y me llamó la atención, para ese entonces lo ví complejo, un año después comencé intentar programa un "Bot" en lenguaje LUA, siendo extremadamente díficil pero teníendo éxito, soprendiendo así a algunas de las personas que programaban por mi código mal escrito, inexperto pero increiblemente creativo y efectivo. Por alguna razón no pensé que podría aprenderlo por mi cuenta.
-                    Tuve algunos otros intentos más pero mientras más funciones era más complejo sin una educación... a medida que pasaban lo años, miraba la programación cómo un sueño que acaparaba muchísimo mi atención pero no lo tenía propuesto cómo proposito para aprender. Muchos años después, en calma me di cuenta que tenía una habilidad para programar pero no era capaz de verla con claridad para aquella época, con ello surgió el hecho de investigar más y verlo cómo una profesión adquiriendo mi primer curso de Java en Udemy. Luego aprendí Python (hasta el momento uno de los que más me ha encantado) y finalmente decidí aprender frontend; HTML, CSS, JavaScript y junto con backend usando Python (flask), MYSQL.</p>
+                <p>Cuando tenía aproximadamente 13 años por medio de un juego llamado "Tibia" conocí lo que era la programación. Descubrí que habían personajes que no eran controlados por personas, podían moverse, hablar, incluso cazar por sí solos y esto me asombró al mismo tiempo que me enamoró. Para mí, no entendía cómo era posible que un personaje pudiera hacer todo eso sin control humano. Razonar, decidir, elegir, moverse, atacar, curarse, todas esas opciones, cómo era posible que un programa hiciera todo eso... me impactó, cómo al mismo tiempo me dejo lleno de curiosidad...! Con el pasar de los años y con mente más de adulto, decidí aventurarme e intentar crear también un script para controlar un personaje con el lenguaje de programación LUA... para aquél entonces tuve éxito pero nunca intenté estudiarlo con objetivo de hacerme un profesional, si no más bien como hobbie. Con el tiempo, noté que entre las cosas que me gustaban y que me apasionaban la programación tenía un lugar muy especial y brillante, cosa que omití por mucho tiempo, es por eso que decidí por primera vez incursionar de una forma más seria y comprar un curso, que fué de Java en la academia online Udemy. A medida que fue pasando el tiempo fuí eligiendo lo que más se acercaba a lo que me gustaba... hoy estoy aquí, desarrollando páginas web y muy entregado a este rubro, dedicandome lo más que puedo a aprender, practicar y mejorar.</p>
 
                 <h4>¿Cuales son mis habilidades?</h4>
                 <ul>
-                    <li>Java Nivel: básico</li>
-                    <li>Python  Nivel: medio</li>
-                    <li>HTML Nivel: avanzado</li>
-                    <li>CSS Nivel: medio - avanzado</li>
-                    <li>JavaScript Nivel: básico</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Python</li>
+                    <li>Java</li>
                 </ul>    
 
                 <h4>Hobbies</h4>
                 <ul>
-                    <li>Futbol</li>
-                    <li>Actividades con mi hija</li>
+                    <li>Tiempo de calidad con mi hija</li>
                     <li>Gaming</li>
-                    <li>Meditación / lectura</li>
+                    <li>Futbol</li>
+                    <li>Practicar programación</li>
+                    <li>Meditación</li>
                 </ul>
 
                 <h4>¿Aspiraciones a corto y largo plazo?</h4>
-                <p>A corto plazo, tener una base firme y sólida respecto a los conocimientos de frontend y backend, teniendo así un conocimiento en concreto, perfilado y orientado a un mismo horizonte, permitiendome brindarle a la compañia que me contrate o persona que contrate mis servios una gestión completa con conocimientos vastos.</p>
-                <p>A largo plazo, mi sueño es dedicarme por completo a la seguridad informática, también conocido cómo Hacking Ético. Encuentro esto cómo mi mayor pasión y motivación en el mundo de la programación ya qué siempre he sido una persona muy detallista y analítica respecto a lo que realmente me gusta, y en este ámbito la capacidad del programador para percibir las necesidades/metas y digerirlas es esencial, teniendo en cuenta que puedo tener perspectivas creativas respecto a manejar un problema, necesidad o una solución. </p> 
+                <p>A corto plazo, tener una base sólida y amplia respecto a toda el area que representa el frontend, teniendo así un conocimiento concreto, perfilado y orientado a un mismo horizonte, permitiéndome brindarle a la compañia, persona que me contrate un servicio de excelente calidad.</p>
+                <p>Líder Técnico Frontend, de manera concreta, para mí es importante tener un excelente nivel de programación, también es importante ser capaz de manejar la logística que conlleva hacer realidad un proyecto, una aplicación, las habilidades blandas que esto requiere y la coordinación de los distintos equipos de trabajo que esto requiere, es un conjunto de habilidades mixtas que es crucial para mí aprender en un largo plazo para ser un programador completo e integro. Estabilidad laboral y crecimiento continuo en el aprendizaje de herramientas, lenguajes, todo aquello que me permita superar mis propios límites y brindarme siempre una actualización y un nivel muy alto en cuanto a la calidad de mi código y el desarrollo de sí mismo. Para mi el desarrollo cómo programador debe ser continuo y lleno de amor hacia esto. Es lo que te permite mantenerte en una buena posición independientemente del tiempo o de lo que esté sucediendo.</p> 
             </div>
 
             <button onclick="moreInfoAbout()" class="btn" id="moreInfoAbout-id">Leer Más</button>
