--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -70,38 +70,43 @@
             <h3>Junior Frontend Developer</h3>
             <div class="about-out" id="about-out">
                 <h4>¿How did I find out about programming?</h4>
-                <p>When I was 17 years old I was in an online game called Tibia, this game became my favorite for a long time...</p>
+                <p>When I was about 13 years old, I discovered programming through a game called "Tibia". I found out that...</p>
                 <h4>¿What are my skills?</h4>
-                <p>Java Level: ...</p>
+                <p>HTML ...</p>
                 <h4>¿Short and long aspirations?</h4>
-                <p>In the short term, have a firm and solid foundation ...</p>
+                <p>In the short term, having a solid and extensive foundation ...</p>
                 <h4>Hobbies</h4>
                 <p>...</p>
             </div>
             <div class="about-more-info-hidden" id="about-more-info">
                 <h4>¿How did I find out about programming?</h4>
-                <p>When I was 17 years old I was in an online game called Tibia, this game became my favorite for a long time, inevitably I found some players who moved automatically, structuredly and did not respond to my messages, which led me to investigate further. Over time I discovered that they were characters called "Bot's", which were programmed by people who, like me, they were in love with the game and were a developer/programmer as a profession. This is how I got to know programming, since then it always amazed me and caught my attention, by then I saw it as complex, a year later I started trying to program a "Bot" in LUA language, being extremely difficult but having success, surprising so to some of the people who programmed because of my poorly written, inexperienced but incredibly creative and effective code. For some reason I didn't think I could learn it on my own. I had a few other attempts but the more functions it was more complex without an education... as the years passed, I looked at programming as a dream that captured my attention a lot but I had not proposed it as a purpose to learn. Many years later, calmly I realized that I had an ability to program but I was not able to see it clearly at that time, with this came the fact of investigating more and seeing it as a profession acquiring my first Java course on Udemy. Then I learned Python (so far one of the ones I've loved the most) and finally decided to learn frontend; HTML, CSS, JavaScript and along with backend using Python (flask), MYSQL.</p>
+                <p>When I was about 13 years old, I discovered programming through a game called "Tibia". I found out that there were characters in the game that were not controlled by people, they could move, talk, and even hunt on their own, and this amazed and fascinated me. I couldn't understand how a character could do all that without human control. The ability to reason, decide, choose, move, attack, heal... all these options, how was it possible for a program to do all that? It had a tremendous impact on me and left me full of curiosity!
+
+                    As the years went by and with a more mature mindset, I decided to venture into creating my own script to control a character using the LUA programming language. At that time, I had success, but I never intended to study it with the goal of becoming a professional, it was more of a hobby for me. Over time, I realized that programming had a special and bright place among the things I liked and was passionate about. I had overlooked it for a long time. That's why I decided to take a more serious step for the first time and purchased a course, which was a Java course on the online academy Udemy.
+                    
+                    As time went on, I gradually focused on what was closest to my interests. And now, here I am, developing websites and fully dedicated to this field, doing my best to learn, practice, and improve as much as I can.</p>
 
                 <h4>¿What are my skills?</h4>
                 <ul>
-                    <li>Java Level: basic</li>
-                    <li>Python  Level: medium</li>
-                    <li>HTML Level: advanced</li>
-                    <li>CSS Level: medium - advanced</li>
-                    <li>JavaScript Level: basic</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Python</li>
+                    <li>Java</li>
                 </ul>    
 
                 <h4>Hobbies</h4>
                 <ul>
-                    <li>Soccer</li>
-                    <li>activities with my daughter</li>
+                    <li>Quality time with my daughter</li>
                     <li>Gaming</li>
-                    <li>meditation / reading</li>
+                    <li>Soccer</li>
+                    <li>Practicing programming</li>
+                    <li>meditation</li>
                 </ul>
 
                 <h4>¿Short and long aspirations?</h4>
-                <p>In the short term, have a firm and solid foundation regarding frontend and backend knowledge, thus having specific knowledge, outlined and oriented to the same horizon, allowing me to provide the company that hires me or the person who hires my services with management complete with vast knowledge.</p>
-                <p>In the long term, my dream is to dedicate completely to computer security, also known as Ethical Hacking. I find this my greatest passion and motivation in the world of programming because I have always been a very detailed and analytical person regarding what I really like, and in this area the programmer's ability to perceive needs/goals and digest them is essential, considering that I can have creative perspectives regarding handling a problem, need or a solution.</p> 
+                <p>In the short term, having a solid and extensive foundation in the entire area that represents frontend, thus having specific, well-defined knowledge and oriented towards the same horizon, allows me to provide the company or person who hires me with a service of excellent quality.</p>
+                <p>Technical Frontend Leader, specifically, for me it is important to have an excellent level of programming. It is also important to be able to manage the logistics involved in bringing a project or application to fruition, the soft skills that this requires, and the coordination of different work teams. It is a combination of mixed skills that is crucial for me to learn in the long term in order to be a complete and integral programmer. Job stability and continuous growth in learning tools, languages, and everything that allows me to surpass my own limits and always provide myself with updates and a very high level of code quality and self-development. For me, the development as a programmer should be continuous and filled with love for this field. It is what allows you to maintain a good position regardless of time or what is happening.</p> 
             </div>
 
             <button onclick="moreInfoAbout()" class="btn" id="moreInfoAbout-id">Read More</button>
@@ -152,32 +157,33 @@
         <div class="portfolio-container">
 
             <div class="portfolio-box">
-                <img src="imagesFiles/portfolio1.jpg" alt="">
+                <img src="imagesFiles/portfolio1.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <h4>Landing Page</h4>
                     <p>Tech_Shop</p>
-                    <a href="https://francodimas.github.io/Landing-Page/"><i class='bx bx-link-external'></i></a>
+                    <a class="portfoli-layer-a-edited" href="https://francodimas.github.io/Landing-Page/" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a class="portfoli-layer-a-edited" href="https://francodimas.github.io/Landing-Page/indexModificado.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="imagesFiles/portfolio2.jpg" alt="">
+                <img src="imagesFiles/portfolio2.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <h4>Data base/Stock</h4>
                     <p>Shop Shoes</p>
-                    <a href="https://francodimas.github.io/Data-Base/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://francodimas.github.io/Data-Base/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="imagesFiles/portfolio3.jpg" alt="">
+                <img src="imagesFiles/portfolio3.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <h4>Family Album</h4>
                     <p>Di Maquino Family Album</p>
-                    <a href="https://francodimas.github.io/Album-Digital/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://francodimas.github.io/Album-Digital/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
