corrigiendo más detalles

--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -38,7 +38,7 @@
     <!-- home section design -->
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello, It's Me</h3>
+            <h3>Hello, I am</h3>
             <h1>Franco Di Mascio</h1>
             <h3>And I'm a</h3>
             <h3><span class="multiple-text"></span></h3>
