--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -43,7 +43,7 @@
             <h3>And I'm a</h3>
             <h3><span class="multiple-text"></span></h3>
             <p>Welcome to my portfolio as a Frontend Developer. 
-                 I'm glad that you are checking around here. Follow me on my social media down bellow</p>
+                 I'm glad to have you here. Follow me on my social media down bellow</p>
             <div class="social-media">
                 <a href="https://github.com/FrancoDiMas"><i class='bx bxl-github'></i></a>
                 <a href="https://twitter.com/Franco_DiMascio"><i class='bx bxl-twitter'></i></a>
@@ -106,7 +106,7 @@
 
                 <h4>¿Short and long aspirations?</h4>
                 <p>In the short term, having a solid and extensive foundation in the entire area that represents frontend, thus having specific, well-defined knowledge and oriented towards the same horizon, allows me to provide the company or person who hires me with a service of excellent quality.</p>
-                <p>Technical Frontend Leader, specifically, for me it is important to have an excellent level of programming. It is also important to be able to manage the logistics involved in bringing a project or application to fruition, the soft skills that this requires, and the coordination of different work teams. It is a combination of mixed skills that is crucial for me to learn in the long term in order to be a complete and integral programmer. Job stability and continuous growth in learning tools, languages, and everything that allows me to surpass my own limits and always provide myself with updates and a very high level of code quality and self-development. For me, the development as a programmer should be continuous and filled with love for this field. It is what allows you to maintain a good position regardless of time or what is happening.</p> 
+                <p>Technical Frontend Leader, specifically, for me it is important to have an excellent level of programming. It is also important to be able to manage the logistics involved in bringing a project or application to fruition, the soft skills that this requires, and the coordination of different work teams. It is a combination of mixed skills that is crucial for me to learn in the long term in order to be a complete and integral programmer. Job stability and continuous growth in learning tools, languages, and everything that allows me to surpass my own limits and always provide myself with updates and a very high level of code quality and self-development. For me, the development as a programmer should be continuous and filled with pasion for this field. It is what allows you to maintain a good position regardless of time or what is happening.</p> 
             </div>
 
             <button onclick="moreInfoAbout()" class="btn" id="moreInfoAbout-id">Read More</button>
