Añadiendo un nuevo portfolio a mi sección de portfolios

--- a/index.html
+++ b/index.html
@@ -175,6 +175,16 @@
             </div>
 
             <div class="portfolio-box">
+                <img src="imagesFiles/portfolio4.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Diseño Web</h4>
+                    <h4>Página Web Oficial</h4>
+                    <p>Tienda Zapatos</p>
+                    <a href="https://francodimas.github.io/Zapateria-Shop/" target="_blank"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
                 <img src="imagesFiles/portfolio3.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Diseño Web</h4>
