--- a/index.html
+++ b/index.html
@@ -183,6 +183,17 @@
                     <a href="https://francodimas.github.io/Album-Digital/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
+
+            <div class="portfolio-box">
+                <img src="imagesFiles/portfolio4.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Diseño web (en desarrollo)</h4>
+                    <h4>Landing Page Zapatería demostrativo solo para móvil</h4>
+                    <p>Zapatería</p>
+                    <a href="https://francodimas.github.io/Landing-Shoes/" target="_blank"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
         </div>
     </section>
 
