--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                  Me contenta tenerte por aquí. Sígueme en mis redes sociales y contacta conmigo</p>
             <div class="social-media">
                 <a href="https://github.com/FrancoDiMas"><i class='bx bxl-github'></i></a>
-                <a href="https://twitter.com/Franco_DiMascio"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.instagram.com/francodimascio5/"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://twitter.com/FrancoDesignWeb"><i class='bx bxl-twitter'></i></a>
+                <!-- <a href=""><i class='bx bxl-instagram-alt'></i></a> -->
                 <a href="https://www.linkedin.com/in/franco-di-mascio-Code-dev"><i class='bx bxl-linkedin'></i></a>
             </div>
             <a download="PDF Currículum Franco Di Mascio" href="archivos/PDF Currículum Franco Di Mascio.pdf" class="btn">Descargar CV</a>
@@ -187,7 +187,7 @@
             <div class="portfolio-box">
                 <img src="imagesFiles/portfolio4.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Diseño web (en desarrollo)</h4>
+                    <h4>En Desarrollo</h4>
                     <h4>Solo demostrativo móviles</h4>
                     <p>Zapatería</p>
                     <a href="https://francodimas.github.io/Landing-Shoes/" target="_blank"><i class='bx bx-link-external'></i></a>
