--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -46,8 +46,8 @@
                  I'm glad to have you here. Follow me on my social media down bellow</p>
             <div class="social-media">
                 <a href="https://github.com/FrancoDiMas"><i class='bx bxl-github'></i></a>
-                <a href="https://twitter.com/Franco_DiMascio"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.instagram.com/francodimascio5/"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://twitter.com/FrancoDesignWeb"><i class='bx bxl-twitter'></i></a>
+                <!-- <a href=""><i class='bx bxl-instagram-alt'></i></a> -->
                 <a href="https://www.linkedin.com/in/franco-di-mascio-Code-dev/"><i class='bx bxl-linkedin'></i></a>
             </div>
             <a download="PDF Currículum Franco Di Mascio" href="archivos/PDF Currículum Franco Di Mascio.pdf" class="btn">Download CV</a>
@@ -186,6 +186,17 @@
                     <a href="https://francodimas.github.io/Album-Digital/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
+
+            <div class="portfolio-box">
+                <img src="imagesFiles/portfolio4.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>In development</h4>
+                    <h4>General Design for Mobiles</h4>
+                    <p>Shoe Store</p>
+                    <a href="https://francodimas.github.io/Landing-Shoes/" target="_blank"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
         </div>
     </section>
 
