--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -50,7 +50,7 @@
                 <!-- <a href=""><i class='bx bxl-instagram-alt'></i></a> -->
                 <a href="https://www.linkedin.com/in/franco-di-mascio-Code-dev/"><i class='bx bxl-linkedin'></i></a>
             </div>
-            <a download="PDF Currículum Franco Di Mascio" href="archivos/PDF Currículum Franco Di Mascio.pdf" class="btn">Download CV</a>
+            <a href="#" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
