--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="about-content">
             <h2 class="heading">Acerca de <span>Mí</span></h2>
-            <h3>Junior Frontend Developer</h3>
+            <h3>Frontend Developer</h3>
             <div class="about-out" id="about-out">
                 <h4>¿Cómo conocí la programación?</h4>
                 <p>Cuando tenía aproximadamente 13 años por medio de un juego llamado "Tibia" conocí lo que era la programación ...</p>
