--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -67,7 +67,7 @@
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>Junior Frontend Developer</h3>
+            <h3>Frontend Developer</h3>
             <div class="about-out" id="about-out">
                 <h4>¿How did I find out about programming?</h4>
                 <p>When I was about 13 years old, I discovered programming through a game called "Tibia". I found out that...</p>
